--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/x-grid": "^4.0.0-alpha.37",
     "@mui/material": "^5.0.1",
+    "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^5.0.0-beta.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "save": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -33,7 +35,6 @@
       "react-app/jest"
     ]
   },
-  
   "browserslist": {
     "production": [
       ">0.2%",
